--- a/detail.html
+++ b/detail.html
@@ -73,6 +73,26 @@
         <h2>Properties</h2>
         <form class="properties"></form>
     </footer>
+    <!-- Modal -->
+<div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
 
     <div id="social">
         <!--<iframe src="http://ghbtns.com/github-btn.html?user=fatiherikli&repo=mockup-designer&type=fork"-->
@@ -236,6 +256,8 @@
     <script src="media/js/libs/backbone-0.9.2.min.js"></script>
     <script src="media/js/libs/html2canvas.min.js"></script>
     <script src="media/js/persistance/local-storage.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    
 
     <script type="text/javascript">
         // namespace definition
